{
    "name": "GameOverInputAction",
    "maps": [
        {
            "name": "GameOverMap",
            "id": "4b032de9-d51e-402f-b008-4654e6fd5512",
            "actions": [
                {
                    "name": "RestartGame",
                    "type": "Button",
                    "id": "16cfeffa-277e-4026-807b-63c78bed23e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a692e54-c41b-450d-9e8a-cbaaad2c3657",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "RestartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": []
        }
    ]
}